@@ -15,6 +15,7 @@ version <next>:
 - adrawgraph audio and drawgraph video filter
 - removegrain video filter
 - Intel QSV-accelerated MPEG-2 video and HEVC encoding
+- Intel QSV-accelerated MPEG-2 video decoding
 - libkvazaar HEVC encoder
 - erosion, dilation, deflate and inflate video filters
 - Dynamic Audio Normalizer as dynaudnorm filter
